--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-compbench.egg-info
-compbench.sublime-project
-compbench.sublime-workspace
+experimentrun.egg-info
+experimentrun.sublime-project
+experimentrun.sublime-workspace
 */__pycache__
